Russian translation update

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-12  Yuri Kozlov  <kozlov.y@gmail.com>
+
+	* ru.po: Updated to 929t.
+
 2007-10-08  Robert Luberda  <robert@debian.org>
 
 	* pl.po: Updated to 929t.
