--- a/po/ru.po
+++ b/po/ru.po
@@ -6,10 +6,10 @@
 # Yuri Kozlov <kozlov.y@gmail.com>, 2004, 2005, 2006, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: 1.14.5\n"
+"Project-Id-Version: 1.14.7\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-08-18 03:58+0300\n"
-"PO-Revision-Date: 2007-08-05 22:24+0400\n"
+"PO-Revision-Date: 2007-10-11 21:01+0400\n"
 "Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -812,27 +812,27 @@ msgstr "не удалось закрыть файл %.255s после чтени
 #: lib/parse.c:332
 #, c-format
 msgid "no package information in `%.255s'"
-msgstr "в файле %.255s нет информации о пакете"
+msgstr "в файле `%.255s' нет информации о пакете"
 
 #: lib/parsehelp.c:38
 #, c-format
 msgid "failed to read `%s' at line %d"
-msgstr "ошибка чтения файла %s в строке %d"
+msgstr "ошибка чтения файла `%s' в строке %d"
 
 #: lib/parsehelp.c:41
-#, fuzzy, c-format
+#, c-format
 msgid "warning, in file `%.255s' near line %d"
-msgstr "%s в файле %.255s около строки %d"
+msgstr "предупреждение, файл `%.255s' около строки %d"
 
 #: lib/parsehelp.c:44
-#, fuzzy, c-format
+#, c-format
 msgid "parse error, in file `%.255s' near line %d"
-msgstr "%s в файле %.255s около строки %d"
+msgstr "ошибка разбора, файл `%.255s' около строки %d"
 
 #: lib/parsehelp.c:48
 #, c-format
 msgid " package `%.255s'"
-msgstr " пакет %.255s"
+msgstr " пакет `%.255s'"
 
 #: lib/parsehelp.c:59
 msgid "failed to write parsing warning"
@@ -924,9 +924,10 @@ msgid "error setting permissions of `%.255s'"
 msgstr "ошибка при установке прав доступа к %.255s"
 
 #: src/archives.c:339
-#, fuzzy, c-format
+#, c-format
 msgid "failed to stat (dereference) existing symlink `%.250s'"
-msgstr "не удалось сделать файл %.250s исполняемым"
+msgstr ""
+"не удалось выполнить stat для существующей символической ссылки `%.250s'"
 
 #: src/archives.c:360
 #, c-format
@@ -934,22 +935,22 @@ msgid ""
 "failed to stat (dereference) proposed new symlink target `%.250s' for "
 "symlink `%.250s'"
 msgstr ""
+"не удалось выполнить stat для предполагаемой новой символической цели `"
+"%.250s' для символической ссылки `%.250s'"
 
 #: src/archives.c:411
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "trying to overwrite `%.250s', which is the diverted version of `"
 "%.250s' (package: %.100s)"
 msgstr ""
-"попытка переписать файл `%.250s', являющийся файлом %.250s с изменённым\n"
-"размещением %.10s%.100s%.10s"
+"попытка переписать `%.250s', являющийся изменённой версией `%.250s' (пакет: "
+"%.100s)"
 
 #: src/archives.c:417
-#, fuzzy, c-format
+#, c-format
 msgid "trying to overwrite `%.250s', which is the diverted version of `%.250s'"
-msgstr ""
-"попытка переписать файл `%.250s', являющийся файлом %.250s с изменённым\n"
-"размещением %.10s%.100s%.10s"
+msgstr "попытка переписать `%.250s', являющийся изменённой версией `%.250s'"
 
 #: src/archives.c:440
 #, c-format
@@ -1080,62 +1081,62 @@ msgid "unable to install new version of `%.255s'"
 msgstr "не удалось установить новую версию %.255s"
 
 #: src/archives.c:853
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - ignoring dependency problem with %s:\n"
 "%s"
 msgstr ""
-"dpkg: предупреждение -- %s удаляется, несмотря на проблемы зависимостей:\n"
+"dpkg: предупреждение -- игнорируются проблемы зависимостей с %s:\n"
 "%s"
 
 #: src/archives.c:860
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - considering deconfiguration of essential\n"
 " package %s, to enable %s.\n"
 msgstr ""
-"dpkg: предупреждение -- для удаления пакета %2$s необходимо\n"
-"удаление пакета первой необходимости %1$s и файлов его конфигурации.\n"
+"dpkg: предупреждение -- рассматривается деконфигурация пакета первой\n"
+"необходимости %s для активации %s.\n"
 
 #: src/archives.c:864
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: no, %s is essential, will not deconfigure\n"
 " it in order to enable %s.\n"
 msgstr ""
-"dpkg: пакет %s является пакетом первой необходимости и не будет\n"
-"удалён, хотя это и нужно для удаления пакета %s.\n"
+"dpkg: нет, пакет %s является пакетом первой необходимости и не будет\n"
+"деконфигурирован для активации %s.\n"
 
 #: src/archives.c:878
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: no, cannot proceed with %s (--auto-deconfigure will help):\n"
 "%s"
 msgstr ""
-"dpkg: удалить %s невозможно (вам поможет --auto-deconfigure):\n"
+"dpkg: нет, невозможно продолжить с %s (вам поможет --auto-deconfigure):\n"
 "%s"
 
 #: src/archives.c:888
-#, fuzzy, c-format
+#, c-format
 msgid "removal of %.250s"
-msgstr "ошибка чтения файла %.250s"
+msgstr "удаление %.250s"
 
 #: src/archives.c:915
-#, fuzzy, c-format
+#, c-format
 msgid "installation of %.250s"
-msgstr "не удалось установить новую версию %.255s"
+msgstr "установка %.255s"
 
 #: src/archives.c:916
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: considering deconfiguration of %s, which would be broken by %s ...\n"
 msgstr ""
-"dpkg: чтобы можно было установить пакет %2$s, необходимо удалить %1$s...\n"
+"dpkg: рассматривается деконфигурация %s, который был бы сломан %s ...\n"
 
 #: src/archives.c:923
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: yes, will deconfigure %s (broken by %s).\n"
-msgstr "dpkg: %s будет удалён, чтобы можно было установить %s.\n"
+msgstr "dpkg: да, %s будет деконфигурирован (сломан из-за %s).\n"
 
 #: src/archives.c:927 src/archives.c:1048
 #, c-format
@@ -1143,13 +1144,13 @@ msgid ""
 "dpkg: regarding %s containing %s:\n"
 "%s"
 msgstr ""
-"dpkg: анализ файла %s, содержащего пакет %s:\n"
+"dpkg: относительно %s, содержащего %s:\n"
 "%s"
 
 #: src/archives.c:935
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - ignoring breakage, may proceed anyway !\n"
-msgstr "dpkg: предупреждение -- конфликт игнорируется, можно продолжать!\n"
+msgstr "dpkg: предупреждение -- поломка игнорируется, можно продолжать!\n"
 
 #: src/archives.c:941
 #, c-format
@@ -1157,11 +1158,13 @@ msgid ""
 "installing %.250s would break %.250s, and\n"
 " deconfiguration is not permitted (--auto-deconfigure might help)"
 msgstr ""
+"установка %.250s сломает %.250s, и\n"
+" деконфигурация не разрешена (--auto-deconfigure может помочь)"
 
 #: src/archives.c:945
 #, c-format
 msgid "installing %.250s would break existing software"
-msgstr ""
+msgstr "установка %.250s сломает имеющееся ПО"
 
 #: src/archives.c:978
 #, c-format
@@ -2786,19 +2789,19 @@ msgid "  Package %s is not installed.\n"
 msgstr "  Пакет %s не установлен.\n"
 
 #: src/packages.c:362
-#, fuzzy, c-format
+#, c-format
 msgid " %s (%s) breaks %s and is %s.\n"
-msgstr "  пакет %.250s предоставляет %.250s и %s.\n"
+msgstr " %s (%s) ломает %s и %s.\n"
 
 #: src/packages.c:370
-#, fuzzy, c-format
+#, c-format
 msgid "  %s (%s) provides %s.\n"
-msgstr "%s (подпроцесс): %s\n"
+msgstr "  %s (%s) предоставляет %s.\n"
 
 #: src/packages.c:375
-#, fuzzy, c-format
+#, c-format
 msgid "  Version of %s to be configured is %s.\n"
-msgstr "  Версия %s в системе %s.\n"
+msgstr "  Версия %s, которая будет настроена: %s.\n"
 
 #: src/packages.c:467
 msgid " depends on "
@@ -2928,14 +2931,14 @@ msgid "error trying to open %.250s"
 msgstr "ошибка при попытке открыть файл %.250s"
 
 #: src/processarc.c:405
-#, fuzzy, c-format
+#, c-format
 msgid "De-configuring %s, to allow removal of %s ...\n"
-msgstr "Удаляются файлы настройки пакета %s, чтобы можно было удалить %s...\n"
+msgstr "Деконфигурация %s, чтобы можно было удалить %s ...\n"
 
 #: src/processarc.c:408
-#, fuzzy, c-format
+#, c-format
 msgid "De-configuring %s ...\n"
-msgstr "Удаляется пакет %s...\n"
+msgstr "Деконфигурация %s ...\n"
 
 #: src/processarc.c:479
 #, c-format
@@ -3101,24 +3104,24 @@ msgid "No packages found matching %s.\n"
 msgstr "Шаблону %s не соответствует ни один пакет.\n"
 
 #: src/query.c:254
-#, fuzzy, c-format
+#, c-format
 msgid "diversion by %s from: %s\n"
-msgstr "размещение файла изменено пакетом %s на %s\n"
+msgstr "размещение изменено %s из %s\n"
 
 #: src/query.c:256
-#, fuzzy, c-format
+#, c-format
 msgid "diversion by %s to: %s\n"
-msgstr "размещение файла изменено пакетом %s на %s\n"
+msgstr "размещение изменено %s на %s\n"
 
 #: src/query.c:259
-#, fuzzy, c-format
+#, c-format
 msgid "local diversion from: %s\n"
-msgstr "локальное изменение размещения файлов"
+msgstr "локальное изменение размещения из %s\n"
 
 #: src/query.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "local diversion to: %s\n"
-msgstr "локальное изменение размещения файла на %s\n"
+msgstr "локальное изменение размещения на %s\n"
 
 #: src/query.c:285
 msgid "--search needs at least one file name pattern argument"
@@ -5704,38 +5707,3 @@ msgstr "пропущен символ новой строки после %s"
 #, perl-format
 msgid "Serious problem: %s"
 msgstr "Серьёзная проблема: %s"
-
-#~ msgid "warning"
-#~ msgstr "нештатная ситуация"
-
-#~ msgid "parse error"
-#~ msgstr "ошибка разбора"
-
-#~ msgid " (package: "
-#~ msgstr " (пакет: "
-
-#~ msgid ""
-#~ "dpkg: regarding %s containing %s:\n"
-#~ " package uses Breaks; not supported in this dpkg\n"
-#~ msgstr ""
-#~ "dpkg: пакет %s в файле %s:\n"
-#~ "используется Breaks; это не поддерживается в данной версии dpkg\n"
-
-#~ msgid "unsupported dependency problem - not installing %.250s"
-#~ msgstr ""
-#~ "проблема с неподдерживаемой зависимостью, пакет %.250s не будет установлен"
-
-#~ msgid "dpkg: warning - ignoring Breaks !\n"
-#~ msgstr "dpkg: предупреждение -- игнорируется Breaks !\n"
-
-#~ msgid "diversion by %s"
-#~ msgstr "размещение файла изменено пакетом %s"
-
-#~ msgid "to"
-#~ msgstr "на"
-
-#~ msgid "from"
-#~ msgstr "с"
-
-#~ msgid "error reading %s"
-#~ msgstr "ошибка чтения %s"
