--- a/debian/changelog
+++ b/debian/changelog
@@ -47,6 +47,7 @@ dpkg (1.14.8) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Polish (Robert Luberda).
+  * Russian (Yuri Kozlov). Closes: #446278
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann).
