Do not call textdomain from perl modules

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,12 @@
 
 2007-10-13  Guillem Jover  <guillem@debian.org>
 
+	* scripts/Dpkg/Shlibs.pm: Do not call textdomain.
+	* scripts/Dpkg/Shlibs/Objdump.pm: Likewise.
+	* scripts/Dpkg/Shlibs/SymbolFile.pm: Likewise.
+
+2007-10-13  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-gensymbols.pl: Use new Dpkg::Arch module.
 	($host_arch): Initialize with get_host_arch instead of direct call to
 	'dpkg-architecture'.
