--- a/debian/changelog
+++ b/debian/changelog
@@ -48,6 +48,7 @@ dpkg (1.14.8) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Polish (Robert Luberda).
   * Russian (Yuri Kozlov). Closes: #446278
+  * Thai (Theppitak Karoonboonyanan). Closes: #446501
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann).
