--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-13  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1280t0f63u.
+
 2007-10-12  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1280t0f63u, add lots of fixes from 
