--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,7 @@ dpkg (1.14.8) UNRELEASED; urgency=low
   * Polish (Robert Luberda).
   * Russian (Yuri Kozlov). Closes: #446278
   * Thai (Theppitak Karoonboonyanan). Closes: #446501
+  * Galician (Jacobo Tarrio). Closes: #446624
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann).
