--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-14  Jacobo Tarrio  <jtarrio@trasno.net>
+
+	* gl.po: Updated to 929t.
+
 2007-10-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated to 929t.
