Dpkg::Version: mark compare_versions as exportable

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-14  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Version.pm: mark compare_versions as exportable.
+
 2007-10-13  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-gensymbols.pl: Use new Dpkg::Arch module.
