Add new module Dpkg::Deps to handle dependencies and some corresponding tests
The Dpkg::Deps::* modules allows various operations on dependencies such
as testing for implication, evaluating them given some packages known to be
installed, etc. They also allow the simplification of the dependencies.

--- a/ChangeLog
+++ b/ChangeLog
@@ -25,6 +25,9 @@
 2007-10-14  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Version.pm: mark compare_versions as exportable.
+	* scripts/Dpkg/Deps.pm: new module to handle dependencies, to
+	evaluate them and check implications between them.
+	* scripts/t/400_Dpkg_Deps.t: non-regression tests for Dpkg::Deps.
 
 2007-10-13  Guillem Jover  <guillem@debian.org>
 
