debian/rules: include cputable ostable triplettable in build-tree
They can be needed during 'make check' (the non-regressions tests
in the scripts directory) as Dpkg.pm exports $pkgdatadir as "..".

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 	* scripts/Dpkg/Version.pm: fix compare_versions to handle properly
 	  the >= cases (it was improperly handled like >> due to a bad regexp).
+	* debian/rules: include cputable ostable triplettable in
+	build-tree so that they are available during make check (Dpkg.pm
+	exports ".." as $pkgdatadir during tests).
 
 2007-10-14  Raphael Hertzog  <hertzog@debian.org>
 
