--- a/man/dpkg-gencontrol.1
+++ b/man/dpkg-gencontrol.1
@@ -10,7 +10,25 @@ dpkg\-gencontrol \- generate Debian control files
 .B dpkg\-gencontrol
 reads information from an unpacked Debian source tree and generates a
 binary package control file (which defaults to debian/tmp/DEBIAN/control);
-it also adds an entry for the binary package to
+during this process it will simplify the relation fields and rewrite them
+in a sorted manner.
+.sp
+Thus
+.IR Pre-Depends ", " Depends ", " Recommends " and " Suggests
+are simplified in this
+order by removing dependencies which are known to be true according to the
+stronger dependencies already parsed. It will also remove any self-dependency
+(in fact it will remove any dependency which evaluates to true given the
+current version of the package as installed). Logically it keeps the
+intersection of multiple dependencies on the same package.
+.sp
+The other relation fields
+.RI ( Enhances ", " Conflicts ", " Breaks ", " Replaces " and " Provides )
+are also simplified individually by computing the union of the various
+dependencies when a package is listed multiple times in the field.
+.sp
+.B dpkg\-gencontrol
+also adds an entry for the binary package to
 .BR debian/files .
 .
 .SH OPTIONS
@@ -120,6 +138,8 @@ generates here.
 Copyright (C) 1995-1996 Ian Jackson
 .br
 Copyright (C) 2000 Wichert Akkerman
+.br
+Copyright (C) 2007 Rapha\[:e]l Hertzog
 .sp
 This is free software; see the GNU General Public Licence version 2 or later
 for copying conditions. There is NO WARRANTY.
