--- a/debian/changelog
+++ b/debian/changelog
@@ -44,6 +44,7 @@ dpkg (1.14.8) UNRELEASED; urgency=low
   * Use shipped perl modules when calling perl programs at build time.
   * Switch perl programs to use the new Dpkg/ErrorHandling module.
   * Switch perl programs to use the new Dpkg/Arch module.
+  * Add support for format strings in Dpkg::ErrorHandling functions.
 
   [ Updated dpkg translations ]
   * Polish (Robert Luberda).
