--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2007-10-18  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Deps.pm: new module to handle dependencies, to
+	evaluate them and check implications between them.
+	* scripts/t/400_Dpkg_Deps.t: non-regression tests for Dpkg::Deps.
+	* scripts/dpkg-checkbuilddeps.pl: adapted to use the new
+	Dpkg::Deps module.
+	* scripts/dpkg-source.pl: Likewise.
+	* scripts/dpkg-scanpackages.pl: Likewise.
+	* scripts/dpkg-gencontrol.pl: Likewise. Also gains new features
+	such as automatic simplification of dependencies.
+	* scripts/controllib.pl: remove unused parsedep(), showdep(),
+	@pkg_dep_fields and @src_dep_fields.
+	* man/dpkg-gencontrol.1: document the new behaviour with
+	dependency fields.
+
 2007-10-18  Guillem Jover  <guillem@debian.org>
 
 	* scripts/Dpkg/ErrorHandling.pm (report): New function.
@@ -21,19 +37,10 @@
 	exports ".." as $pkgdatadir during tests).
 	* scripts/dpkg-shlibdeps.pl: bugfix, avoid unwanted modification
 	of @pkg_shlibs by my_find_library.
-	* scripts/dpkg-{checkbuilddeps.pl,gencontrol.pl,source.pl}:
-	adapted to use the new Dpkg::Deps module. dpkg-gencontrol gains
-	new features such as automatic simplification of dependencies.
-	* scripts/controllib.pl: remove unused parsedep() and showdep().
-	* man/dpkg-gencontrol.1: document the new behaviour with
-	dependency fields.
 
 2007-10-14  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Version.pm: mark compare_versions as exportable.
-	* scripts/Dpkg/Deps.pm: new module to handle dependencies, to
-	evaluate them and check implications between them.
-	* scripts/t/400_Dpkg_Deps.t: non-regression tests for Dpkg::Deps.
 
 2007-10-13  Guillem Jover  <guillem@debian.org>
 
