--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-26  Peter Karlsson  <peterk@debian.org>
+
+	* dpkg-dev.pot: Regenerated.
+	* *.po: Merged with dpkg-dev.pot.
+	* sv.po: Updated Swedish to 478t.
+
 2007-10-08 Robert Luberda <robert@debian.org>
 
 	* LINGUAS, pl.po: Initial Polish translation with 322t69f71u.
