--- a/debian/changelog
+++ b/debian/changelog
@@ -65,6 +65,7 @@ dpkg (1.14.8) UNRELEASED; urgency=low
 
   [ Updated scripts translations ]
   * Polish (Robert Luberda).
+  * Swedish (Peter Karlsson).
 
  -- Raphael Hertzog <hertzog@debian.org>  Mon, 08 Oct 2007 20:49:51 +0200
 
