Add German translation for scripts

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,7 +55,7 @@ dpkg (1.14.8) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Polish (Robert Luberda).
   * Russian (Yuri Kozlov). Closes: #446278
-  * Thai (Theppitak Karoonboonyanan). Closes: #446501
+  * Thai added (Theppitak Karoonboonyanan). Closes: #446501
   * Galician (Jacobo Tarrio). Closes: #446624
 
   [ Updated man pages translations ]
@@ -66,6 +66,7 @@ dpkg (1.14.8) UNRELEASED; urgency=low
   [ Updated scripts translations ]
   * Polish (Robert Luberda).
   * Swedish (Peter Karlsson).
+  * German added (Helge Kreutzmann). Closes: #448353
 
  -- Raphael Hertzog <hertzog@debian.org>  Mon, 08 Oct 2007 20:49:51 +0200
 
