Updated German translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -59,7 +59,7 @@ dpkg (1.14.8) UNRELEASED; urgency=low
   * Galician (Jacobo Tarrio). Closes: #446624
 
   [ Updated man pages translations ]
-  * German (Helge Kreutzmann).
+  * German (Helge Kreutzmann). Closes: #448354
   * Polish (Robert Luberda).
   * Swedish (Peter Karlsson).
 
