Fix some quote characters in manpages
dpkg-query.1: Replace ' with \(aq in example
dpkg-source.1: Replace ' with \(aq in synopsis

--- a/debian/changelog
+++ b/debian/changelog
@@ -45,6 +45,9 @@ dpkg (1.14.8) UNRELEASED; urgency=low
     Closes: #445858
   * Fix Dpkg::BuildOptions (and thereby dpkg-buildpackage) to really
     set DEB_BUILD_OPTIONS. Found by Daniel Shepler. Closes: #446119
+  * Change some ' in shell code in dpkg-source.1 and dpkg-query.1 to
+    proper \(aq. Reported by Daniel van Eeden. Closes: #447476
+    
 
   [ Guillem Jover ]
   * Use shipped perl modules when calling perl programs at build time.
