--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-29  Frank Lichtenheld  <djpig@debian.org>
+
+	* dpkg-query.1: Replace ' with \(aq in example.
+	Reported by Daniel van Eeden <daniel_e -at- dds nl>
+	* dpkg-source.1: Replace ' with \(aq in synopsis.
+
 2007-10-26  Peter Karlsson  <peterk@softwolves.pp.se>
 
 	* po/sv.po: Updated to 1343t.
