Fix erroneous description of Breaks in dselect
The description should be 'breaks' as in 'A breaks B' rather than
'A breaks with B' since it is B that is broken by A and not vice versa.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-03-09  Ian Jackson  <ian@davenant.greenend.org.uk>
 
+	* dselect/pkgdisplay.cc (relatestrings): Change 'breaks with' to
+	'breaks'.
+
+2008-03-09  Ian Jackson  <ian@davenant.greenend.org.uk>
+
 	* dselect/pkgdepcon.cc (packagelist::resolvedepcon): Move dep_breaks
 	case after dep_conflicts so that it falls through.
 	(packagelist::deppossatisfied): Handle dep_breaks in the same way as
