Updated Swedish manual page translation.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-02  Peter Karlsson  <peter@softwolves.pp.>
+
+	* po/dpkg-man.pot: Regenerated.
+	* po/*.po: Merged with dpkg-man.pot.
+	* po/sv.po: Updated to 1345t0f0u.
+
 2007-10-29  Frank Lichtenheld  <djpig@debian.org>
 
 	* dpkg-query.1: Replace ' with \(aq in example.
@@ -6,7 +12,7 @@
 
 2007-10-26  Peter Karlsson  <peterk@softwolves.pp.se>
 
-	* po/sv.po: Updated to 1343t.
+	* po/sv.po: Updated to 1343t0f0u.
 
 2007-10-24  Peter Karlsson  <peterk@softwolves.pp.se>
 
