--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-04  Guillem Jover  <guillem@debian.org>
+
+	* scripts/Dpkg/Arch.pm (get_valid_arches): Return an array instead of
+	printing the architectures.
+
 2007-10-18  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Deps.pm: new module to handle dependencies, to
