dpkg-architecture: Perform -L actions inside argument processing loop
To preserve the same behaviour move the initialization of host and build
variables after the argument processing loop.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-11-04  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-architecture.pl: Move setting of host and build arch
+	variables after argument processing. Call list_arches from argument
+	processing loop. Move architecture listing to ...
+	(list_arches): ... here. New function.
+
+2007-11-04  Guillem Jover  <guillem@debian.org>
+
 	* scripts/Dpkg/Arch.pm (get_valid_arches): Return an array instead of
 	printing the architectures.
 
